# FastNessusParser

./: Cargo.toml  README.md  pyproject.toml
src/: builder.rs  lib.rs  parser.rs  schema.rs  transform.rs
test/: generate_nessus_xml.py  parse.py
