[package]
name = "fast_nessus_parser"
version = "0.1.0"
edition = "2024"

[lib]
name = "fast_nessus_parser"
crate-type = ["cdylib"]

[dependencies]
regex = "1.10"
arrow = { version = "53.2.0", features = ["pyarrow"] }
pyo3 = { version = "0.22.6", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.31", features = ["serialize"] }
memmap2 = "0.9"
rayon = "1.8"
anyhow = "1.0"
chrono = "0.4"
serde_json = "1.0"