[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fast_nessus_parser"
version = "0.1.0"
description = "High-performance Nessus XML Parser using Rust and Arrow"
authors = [
    { name = "Hampton Young", email = "hyoung@variant-inc.com" }
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
]

[tool.maturin]
module-name = "fast_nessus_parser"